add vercel.json rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,11 @@
     "deploymentEnabled": {
       "gh-pages": false
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
