--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "基于 VitePress 打造个人前端导航网站",
   "private": true,
   "scripts": {
-    "dev": "vitepress dev docs --port=8732",
+    "dev": "vitepress dev docs --host 0.0.0.0 --port=8732",
     "build": "vitepress build docs",
     "preview": "vitepress preview docs --port 8730",
     "prepare": "husky install",
@@ -38,7 +38,7 @@
     "sass": "^1.69.4",
     "tailwindcss": "^3.4.1",
     "vite-plugin-markdown-preview": "^1.1.1",
-    "vitepress": "^1.0.1",
+    "vitepress": "^1.6.3",
     "vue": "^3.4.21"
   },
   "prettier": "@femm/prettier",
